tests/e2e/neutron/network-policy/04-patch-disable-networkpolicy.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch: unset spec.networkPolicy so the operator deletes the NetworkPolicy.
apiVersion: neutron.openstack.c5c3.io/v1alpha1
kind: Neutron
metadata:
  name: neutron-netpol
  namespace: openstack
spec:
  networkPolicy: null
